imports/ui/components/courses/delete-events/delete-events.scss
.delete-events-details {
	color: $gray;

	&:hover {
		color: $gray;
	}
}

.course-event-tasks > .btn:first-child {
	width: auto;
}

.course-event-tasks > .btn + .btn {
	@include td-margin(left, 5px);
}

.modal-body .panel {
	margin: 0;
}

.delete-events-list,
.selected-events {
	overflow: auto;
}

.delete-events-list {
	border: 1px solid $blue-lighter;
	max-height: 350px;
	margin-bottom: 15px;
	padding: 0 10px;
}

.selected-events {
	max-height: 300px;
	margin: 15px 0;
	overflow: auto;
}

.delete-events-events-title {
	margin-bottom: 5px;
}

